portpage/static/css/index.css
/* color reference
pink #e0acd5
periwinkle #3993dd
ice #97f9f9
lavender #a4def9
shirt #c1e0f7
*/
/*new color reference
dark blue: #08415c
red pink: #cc2936
pink: #ebbab9
light blue: #388697
green: #b5ffe1
/* get about me section to be the dark blue background
   position photo  on right hand side of page*/

.page{
  background-color: #08415c;
}
.navbar {
    background-color: #c1e0f7;
    overflow: hidden;
    position: fixed;
    bottom: 0;
    width: 100%;
}

/* Style the links inside the navigation bar */
.navbar a {
    float: left;
    display: block;
    color: Black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

/* Change the color of links on hover */
.navbar a:hover {
    background-color: #cc2936;
    color: black;
}

/* Add a color to the active/current link */
.navbar a.active {
    background-color: #cc2936;
    color: white;
}
.header{
  text-align: center;
  padding-top: 260px;
  color: #dbb608;
  background-color: #08415c;
  width: 100%;
  height: 800px;
}
.header h1 {
  font-size: 60px;
}
.intro{
  margin-top: 20px;
  font-size: 20px;
}
.icons a:hover{
  color: #debc1e;
  text-decoration: none;
}
.icon{
  display: inline;
  padding: 20px 15px;
}
.icons a{
  color: #664c43;
}
#myCarousel{
  width: 800px;
  height: auto;
  margin: auto;
}
#myCarousel1{
  width: 800px;
  height: auto;
  margin: auto;
}
.content{
  background-color: #08415c;
  width: 100%;
  padding-bottom: 20px;
  text-align: center;
  color: #dbb608;
  padding-top: 20px;
  height: 1600px;
}
.content h1 {
  font-size: 50px;
}
.project1{
  background-color: #388697;
  border-radius: 10px;
  width: 800px;
  height: 550px;
  margin: auto;
  margin-bottom: 30px;
  padding-top: 15px;
  padding-bottom: 15px;
  color: #debc1e;
}
.project{
  background-color: #388697;
  border-radius: 10px;
  width: 800px;
  margin: auto;
  margin-bottom: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
  color: #debc1e;
}
.project_desc{
  margin-top: 20px;
}
.project p {
  font-weight: bold;
}
.project1 p {
  font-weight: bold;
}
.about_me {
  background-color: red;
}
.about_text p {
  font-weight: bold;
}
.contact {
  /* padding-top: 20px; */
  background-color: #08415c;
  /* padding-bottom: 50px; */
}
.contact-block{
  display: inline-block;
}
.mailform{
  /*background-color: #cc2936;*/
  display: block;
  margin: auto;
  /* margin-top: 30px; */
  /* border-radius: 10px; */
  /* padding: 20px; */
}
@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-font-smoothing: antialiased;
  -o-font-smoothing: antialiased;
  font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

body {
  font-family: "Roboto", Helvetica, Arial, sans-serif;
  font-weight: 100;
  font-size: 12px;
  line-height: 30px;
  color: #777;
  background: #4CAF50;
}

.container {
  max-width: 400px;
  width: 100%;
  margin: 0 auto;
  position: relative;
}

#contact input[type="text"],
#contact input[type="email"],
#contact input[type="tel"],
#contact input[type="url"],
#contact textarea,
#contact button[type="submit"] {
  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
}

#contact {
  background: #F9F9F9;
  border-radius: 10px;
  padding: 25px;
  margin-top: 15px;
  margin-bottom: 50px;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}

#contact h3 {
  display: block;
  font-size: 30px;
  font-weight: 300;
  margin-bottom: 10px;
}

#contact h4 {
  margin: 5px 0 15px;
  display: block;
  font-size: 13px;
  font-weight: 400;
}

fieldset {
  border: medium none !important;
  margin: 0 0 10px;
  min-width: 100%;
  padding: 0;
  width: 100%;
}

#contact input[type="text"],
#contact input[type="email"],
#contact input[type="tel"],
#contact input[type="url"],
#contact textarea {
  width: 100%;
  border: 1px solid #ccc;
  background: #FFF;
  margin: 0 0 5px;
  padding: 10px;
}

#contact input[type="text"]:hover,
#contact input[type="email"]:hover,
#contact input[type="tel"]:hover,
#contact input[type="url"]:hover,
#contact textarea:hover {
  -webkit-transition: border-color 0.3s ease-in-out;
  -moz-transition: border-color 0.3s ease-in-out;
  transition: border-color 0.3s ease-in-out;
  border: 1px solid #aaa;
}

#contact textarea {
  height: 100px;
  max-width: 100%;
  resize: none;
}

#contact button[type="submit"] {
  cursor: pointer;
  width: 100%;
  border: none;
  background: #08415c;
  color: #FFF;
  margin: 0 0 5px;
  padding: 10px;
  font-size: 15px;
}

#contact button[type="submit"]:hover {
  background: #388697;
  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
}

#contact button[type="submit"]:active {
  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
}

.copyright {
  text-align: center;
}

#contact input:focus,
#contact textarea:focus {
  outline: 0;
  border: 1px solid #aaa;
}

::-webkit-input-placeholder {
  color: #888;
}

:-moz-placeholder {
  color: #888;
}

::-moz-placeholder {
  color: #888;
}

:-ms-input-placeholder {
  color: #888;
}

